version/0.63/_sources/examples/gallery_examples/00-mapdl-examples/index.rst.txt


.. _sphx_glr_examples_gallery_examples_00-mapdl-examples:

Full Examples Using PyMAPDL
===========================
These examples demonstrate full examples using the PyMAPDL module.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial shows how you can use PyMAPDL to determine and verify the &quot;stress concentration f...">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_2d_plate_with_a_hole_thumb.png
    :alt: MAPDL 2D Plane Stress Concentration Analysis

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_2d_plate_with_a_hole.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MAPDL 2D Plane Stress Concentration Analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Objective ~~~~~~~~~ In this example we will perform stress analysis of pipe due to internal pre...">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_2d_pressure_vessel_thumb.png
    :alt: 2D Pressure Vessel

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_2d_pressure_vessel.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">2D Pressure Vessel</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial is the 3D corollary to the 2D plane example ref_plane_stress_concentration, but T...">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_3d_notch_thumb.png
    :alt: 3D Stress Concentration Analysis for a Notched Plate

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_3d_notch.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D Stress Concentration Analysis for a Notched Plate</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how you can use MAPDL to create a plate, impose thermal boundary cond...">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_3d_plate_thermal_thumb.png
    :alt: Basic Thermal Analysis with pyMAPDL

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_3d_plate_thermal.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Basic Thermal Analysis with pyMAPDL</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create contact elements for general contact.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_contact_elements_thumb.png
    :alt: Contact Element Example

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_contact_elements.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Contact Element Example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example creates a bladed disc using parametric geometry of a cyclic sector and then runs a...">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_cyclic_analysis_thumb.png
    :alt: Cyclic Analysis

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_cyclic_analysis.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Cyclic Analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Summary**: This example illustrates how to map results from a CFD analysis and perform a Fini...">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_exhaust_manifold_thermal_stress_thumb.png
    :alt: Thermal-structural analysis of exhaust manifold

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_exhaust_manifold_thermal_stress.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Thermal-structural analysis of exhaust manifold</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PyMAPDL can load basic IGES geometry for analysis.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_geometry_thumb.png
    :alt: Plotting and Mesh Access

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_geometry.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plotting and Mesh Access</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Summary**: Basic walk through PyMAPDL capabilities.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_lathe_cutter_thumb.png
    :alt: Structural Analysis of a Lathe Cutter

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_lathe_cutter.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Structural Analysis of a Lathe Cutter</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a simple example that loads an archive file containing a beam and then runs a modal ana...">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_mapdl_3d_beam_thumb.png
    :alt: MAPDL 3D Beam Example

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_mapdl_3d_beam.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MAPDL 3D Beam Example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is an example from FINITE ELEMENT ANALYSIS USING ANSYS 11.0">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_mapdl_beam_thumb.png
    :alt: MAPDL 2D Beam Example

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_mapdl_beam.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MAPDL 2D Beam Example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial shows how you can use pyansys and MAPDL to interpolate along a path for stress.  ...">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_path_operations_thumb.png
    :alt: Path Operations within pyMAPDL and MAPDL

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_path_operations.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Path Operations within pyMAPDL and MAPDL</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Also shown here: - Various ways of accessing stress results from MAPDL. - Comparison between PR...">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_pressure_vessel_thumb.png
    :alt: Pressure Vessel

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_pressure_vessel.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Pressure Vessel</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Run a modal analysis on a mesh generated from pyvista within MAPDL.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_pyvista_mesh_thumb.png
    :alt: PyVista Mesh Integration

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_pyvista_mesh.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PyVista Mesh Integration</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Example adapted from: https://www.simutechgroup.com/tips-and-tricks/fea-articles/97-fea-tips-tr...">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_transient_thermal_thumb.png
    :alt: Example Thermal Transient Analysis

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_transient_thermal.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Example Thermal Transient Analysis</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/gallery_examples/00-mapdl-examples/2d_plate_with_a_hole
   /examples/gallery_examples/00-mapdl-examples/2d_pressure_vessel
   /examples/gallery_examples/00-mapdl-examples/3d_notch
   /examples/gallery_examples/00-mapdl-examples/3d_plate_thermal
   /examples/gallery_examples/00-mapdl-examples/contact_elements
   /examples/gallery_examples/00-mapdl-examples/cyclic_analysis
   /examples/gallery_examples/00-mapdl-examples/exhaust_manifold_thermal_stress
   /examples/gallery_examples/00-mapdl-examples/geometry
   /examples/gallery_examples/00-mapdl-examples/lathe_cutter
   /examples/gallery_examples/00-mapdl-examples/mapdl_3d_beam
   /examples/gallery_examples/00-mapdl-examples/mapdl_beam
   /examples/gallery_examples/00-mapdl-examples/path_operations
   /examples/gallery_examples/00-mapdl-examples/pressure_vessel
   /examples/gallery_examples/00-mapdl-examples/pyvista_mesh
   /examples/gallery_examples/00-mapdl-examples/transient_thermal

